--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -1,7 +1,7 @@
 ---
 layout: posts
-title: چه هوای خوبی 
+title: my fractalls
 ---
 
 
-- غیعهغثغ7غ
+- <img src="../assets/images/Screenshot (121).png>
