--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -4,4 +4,4 @@ title: my fractalls
 ---
 
 
-- <img src="../assets/images/Screenshot (121).png>
+- <img src="../assets/images/Screenshot (121).png">
