--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -5,3 +5,4 @@ title: my fractalls
 
 
 <img src="../assets/images/Screenshot (121).png">
+<h1 style="text-align:center;">ابتدا تنه درخت را میکشیم سپس  کم کم قطر قلم را کم میکنیم و بعد رنگ قلم را عوض میکنیم</h1>
