--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -5,4 +5,26 @@ title: my fractalls
 
 
 <img src="../assets/images/Screenshot (121).png">
-<h1 style="text-align:center;">ابتدا تنه درخت را میکشیم سپس  کم کم قطر قلم را کم میکنیم و بعد رنگ قلم را عوض میکنیم</h1>
+<h6 style="text-align:center;">ابتدا تنه درخت را میکشیم سپس  کم کم قطر قلم را کم میکنیم و بعد رنگ قلم را عوض میکنیم</h6>
+<pre style="text-align:center;">import turtle
+    def tree (d, r , s):
+        turtle.pensize(s)
+        if d<3 :
+            return
+        if d>=5:
+            turtle.pencolor("brown")
+        else:
+            turtle.pencolor("green")
+        turtle.forward(d)
+        turtle.left(r)
+        tree(0.7*d,r,s*0.6)
+        turtle.right(2*r)
+        tree(0.7*d,r,s*0.6)
+        turtle.left(r)
+        turtle.backward(d)
+        turtle.update()
+    #turtle.speed(0)
+    turtle.tracer(0)
+    turtle.left(90)
+    tree(70,30,4)
+    turtle.mainloop()</pre>
