--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -6,7 +6,7 @@ title: my fractalls
 
 <img src="../assets/images/Screenshot (121).png">
 <h6 style="text-align:center;">ابتدا تنه درخت را میکشیم سپس  کم کم قطر قلم را کم میکنیم و بعد رنگ قلم را عوض میکنیم</h6>
-<pre style="text-align:center;">import turtle
+<pre>import turtle
     def tree (d, r , s):
         turtle.pensize(s)
         if d<3 :
