--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -6,25 +6,25 @@ title: my fractalls
 
 <img src="../assets/images/Screenshot (121).png">
 <h6 style="text-align:center;">ابتدا تنه درخت را میکشیم سپس  کم کم قطر قلم را کم میکنیم و بعد رنگ قلم را عوض میکنیم</h6>
-<p>import turtle<br>
-    def tree (d, r , s):<br>
-        turtle.pensize(s)<br>
-        if d<3 :<br>
-            return<br>
-        if d>=5:<br>
-            turtle.pencolor("brown")<br>
-        else:<br>
-            turtle.pencolor("green")<br>
-        turtle.forward(d)<br>
-        turtle.left(r)<br>
-        tree(0.7*d,r,s*0.6)<br>
-        turtle.right(2*r)<br>
-        tree(0.7*d,r,s*0.6)<br>
-        turtle.left(r)<br>
-        turtle.backward(d)<br>
-        turtle.update()<br>
-    #turtle.speed(0)<br>
-    turtle.tracer(0)<br>
-    turtle.left(90)<br>
-    tree(70,30,4)<br>
-    turtle.mainloop()</p>
+<pre>import turtle
+    def tree (d, r , s):
+        turtle.pensize(s)
+        if d<3 :
+            return
+        if d>=5:
+            turtle.pencolor("brown")
+        else:
+            turtle.pencolor("green")
+        turtle.forward(d)
+        turtle.left(r)
+        tree(0.7*d,r,s*0.6)
+        turtle.right(2*r)
+        tree(0.7*d,r,s*0.6)
+        turtle.left(r)
+        turtle.backward(d)
+        turtle.update()
+    #turtle.speed(0)
+    turtle.tracer(0)
+    turtle.left(90)
+    tree(70,30,4)
+    turtle.mainloop()</pre>
