--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -28,3 +28,69 @@ title: my fractalls
     turtle.left(90)
     tree(70,30,4)
     turtle.mainloop()</pre>
+<hr>
+
+<img src="../assets/images/Screenshot (127).png">
+<h6 style="text-align:center;">ابتدا یک درخت را ترسیم میکنیم و سپس به طور رندوم درخت هارا اجرا میکنیم</h6>
+<pre>import random
+import time
+import turtle
+
+def Tree(d, a, w):
+    # save the color
+    color =turtle.pencolor() 
+    if d <5:
+        return
+    if d < 30 and a != 25:
+        turtle.pencolor("green")
+        a = 25
+    if d<10:
+
+        turtle.circle(5)
+
+    turtle.pendown()
+    turtle.pensize(w)
+    turtle.forward(d)
+    turtle.left(a)
+    Tree(d * (random.random()/2 + 0.5), 
+         a * (random.random()/2 + 0.7), 
+         w * (random.random()/2 + 0.5))
+    turtle.right(2 * a)
+    Tree(d * (random.random()/2 + 0.5), 
+         a * (random.random()/2 + 0.7), 
+         w * (random.random()/2 + 0.5))
+    turtle.left(a)
+    turtle.penup()
+    turtle.backward(d)
+    # restore the color
+    turtle.pencolor(color)
+
+
+def setup_screen(width, heigh):
+    turtle.left(90)
+    turtle.pencolor("brown")
+    turtle.tracer(0)
+    turtle.hideturtle()
+    turtle.screensize(width, heigh)
+
+width, height = 2000, 500
+x=-width/2 + 100
+y=-height/2
+setup_screen(width, height)
+tree_count = 20
+
+turtle.tracer(0)
+for ـ in range(tree_count):
+    x += random.randint(50, 100)
+    y = random.randint(-500, 200)
+    turtle.penup()
+    turtle.setpos(x, y)
+    turtle.pendown()
+    Tree(
+        random.randint(25, 100), 
+        random.randint(5, 20), 
+        random.randint(5, 25))
+    turtle.update()
+turtle.update
+
+turtle.mainloop()</pre>
