--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -94,3 +94,24 @@ for ـ in range(tree_count):
 turtle.update
 
 turtle.mainloop()</pre>
+<hr>
+<img src="../assets/images/Screenshot (123).png">
+<h6 style="text-align:center;">برای این مثلث از کتاب خانه ترتل استفاده کردم</h6>
+
+<pre>import turtle
+def triangle(d):
+    if d < 5:
+        return
+    
+    for _ in range(3):
+        triangle(d/2)
+        turtle.forward(d)
+        turtle.left(120)
+
+turtle.tracer(0)
+triangle(200)
+turtle.update()
+turtle.mainloop()
+turtle.hideturtle()</pre>
+
+
