--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -115,3 +115,15 @@ turtle.mainloop()
 turtle.hideturtle()</pre>
 
 
+
+
+
+title: ایده از من عکس از هوش مصنوعی
+---
+
+
+<img src="../assets/images/Screenshot (152).png">
+<h6 style="text-align:center;">An image of the world led by God</h6>
+
+<img src="../assets/images/Screenshot (151).png">
+<h6 styie="text-align:center;">of a modern world led by God</h6>
