--- a/_posts/2023-11-15-post-Saba.md
+++ b/_posts/2023-11-15-post-Saba.md
@@ -1,8 +1,9 @@
 ---
 layout: posts
-title: my fractalls
+title: My Fractalls
 ---
-
+title: my fractalls 
+---
 
 <img src="../assets/images/Screenshot (121).png">
 <h6 style="text-align:center;">ابتدا تنه درخت را میکشیم سپس  کم کم قطر قلم را کم میکنیم و بعد رنگ قلم را عوض میکنیم</h6>
@@ -116,14 +117,3 @@ turtle.hideturtle()</pre>
 
 
 
-
-
-title: ایده از من عکس از هوش مصنوعی
----
-
-
-<img src="../assets/images/Screenshot (152).png">
-<h6 style="text-align:center;">An image of the world led by God</h6>
-
-<img src="../assets/images/Screenshot (151).png">
-<h6 styie="text-align:center;">of a modern world led by God</h6>
